<resources>
    <string name="app_name">Settings</string>
    <string name="settings">Settings</string>
    <string name="language_switch">en/rus</string>
    <string name="nick">Nick</string>
    <string name="language">Language</string>
    <string name="graphics">Graphics</string>
    <string name="graphics_switch">low/high</string>
    <string name="autosave">Autosave</string>
    <string name="autosave_switch">on/off</string>
    <string name="tv">+</string>
</resources>